@@ -3,18 +3,33 @@ import java.util.Arrays;
 import java.util.List;
 import java.util.zip.*;
 import java.nio.file.*;
+import java.io.File;
+
+import static java.nio.file.Files.createDirectory;
+import static java.nio.file.Files.createFile;
 
 public class Main {
-    static StringBuilder stringBuilder;
+    private static StringWriter stringBuilder;
 
-    public static void main(String[] args) {
-        stringBuilder = new StringBuilder();
-        List<String> listDirectories = List.of("C:\\Users\\HP\\IdeaProjects\\Installation\\Games\\src");
+    public static void main(String[] args) throws FileNotFoundException {
+        stringBuilder = new StringWriter();
+        List<String> listDirectories = Arrays.asList("C:\\Users\\HP\\IdeaProjects\\Installation\\Games\\src",
+                "C:\\Users\\HP\\IdeaProjects\\Installation\\Games\\src\\main",
+                "C:\\Users\\HP\\IdeaProjects\\Installation\\Games\\src\\test",
+                "C:\\Users\\HP\\IdeaProjects\\Installation\\Games\\res",
+                "C:\\Users\\HP\\IdeaProjects\\Installation\\Games\\res\\drawables",
+                "C:\\Users\\HP\\IdeaProjects\\Installation\\Games\\res\\vectors",
+                "C:\\Users\\HP\\IdeaProjects\\Installation\\Games\\res\\icons",
+                "C:\\Users\\HP\\IdeaProjects\\Installation\\Games\\savegames",
+                "C:\\Users\\HP\\IdeaProjects\\Installation\\Games\\temp");
 
         for (String dir : listDirectories) {
             createDirectory(dir);
         }
+
         createFile("C:\\Users\\HP\\IdeaProjects\\Installation\\Games\\src\\", "Main.java");
+        createFile("C:\\Users\\HP\\IdeaProjects\\Installation\\Games\\src\\", "Util.java");
+        createFile("C:\\Users\\HP\\IdeaProjects\\Installation\\Games\\src\\", "temp.txt");
 
         File gamesFolder = new File("Games");
         File srcFolder = new File(gamesFolder, "src");
@@ -22,22 +37,21 @@ public class Main {
         File savegamesFolder = new File(gamesFolder, "savegames");
         File tempFolder = new File(gamesFolder, "temp");
 
-        if (checkIsCreateDirectory(gamesFolder) &&
+        boolean allDirectoriesCreated = checkIsCreateDirectory(gamesFolder) &&
                 checkIsCreateDirectory(srcFolder) &&
                 checkIsCreateDirectory(resFolder) &&
                 checkIsCreateDirectory(savegamesFolder) &&
-                checkIsCreateDirectory(tempFolder)) {
-
+                checkIsCreateDirectory(tempFolder);
+        if (allDirectoriesCreated) {
             File mainFolder = new File(srcFolder, "main");
             mainFolder.mkdirs();
             try {
-                Files.createFile(Paths.get(mainFolder.getAbsolutePath(), "Main.java"));
-                Files.createFile(Paths.get(mainFolder.getAbsolutePath(), "Utils.java"));
-                Files.createFile(Paths.get(tempFolder.getAbsolutePath(), "temp.txt"));
+                createFile(mainFolder.getAbsolutePath(), "Main.java");
+                createFile(mainFolder.getAbsolutePath(), "Utils.java");
+                createFile(tempFolder.getAbsolutePath(), "temp.txt");
             } catch (IOException e) {
                 System.err.println("Не удалось создать файл: " + e.getMessage());
             }
-
 
             new File(resFolder, "drawables").mkdirs();
             new File(resFolder, "vectors").mkdirs();
@@ -69,32 +83,32 @@ public class Main {
         } else {
             System.out.println("Невозможно прочитать или записать файл.");
         }
-
-    }
-
-    private static void zipFiles(String s, List<String> filesToZip) {
     }
 
     private static void createDirectory(String path) {
         File f = new File(path);
-        if (f.mkdirs()) {
-            stringBuilder.append("Директория " + f + "успешно создана: ");
-        } else {
-            stringBuilder.append("Ошибка при создании: " + f.getName());
-        }
+        if (!f.exists()) {
+            if (f.mkdirs()) {
+                stringBuilder.append("Директория " + f + "успешно создана: ");
+            } else {
+                stringBuilder.append("Ошибка при создании: " + f.getName());
+            }
+        } else stringBuilder.append("Директория " + path + "уже создана.");
     }
 
     private static boolean checkIsCreateDirectory(File directory) {
         if (!directory.exists()) {
             if (directory.mkdirs()) {
-                stringBuilder.append("Директория" + directory.getName() + "успешно создана");
+                stringBuilder.append("Директория" + directory.getName() + "успешно создана\n");
                 return true;
             } else {
-                stringBuilder.append("Ошибка при создании директории " + directory.getName());
+                stringBuilder.append("Ошибка при создании директории " + directory.getName() + "\n");
                 return false;
             }
+        } else {
+            stringBuilder.append("Директория " + directory.getName() + "уже существует\n");
+            return true;
         }
-        return false;
     }
 
     private static boolean checkAndCreateFile(File file) {
@@ -112,29 +126,35 @@ public class Main {
         }
     }
 
-    private static void createFile(String path, String fileName) {
+    private static void createFile(String path, String fileName) throws FileNotFoundException {
         File f = new File(path, fileName);
         try {
-            if (f.createNewFile()) {
-                stringBuilder.append("Создан файл: ").append(fileName).append("\n");
-            } else {
-                stringBuilder.append("Ошибка при создании файла ").append(f.getName()).append("\n");
-            }
+            if (!f.exists()) {
+                if (f.createNewFile()) {
+                    stringBuilder.append("Создан файл: ").append(fileName).append("\n");
+                } else {
+                    stringBuilder.append("Ошибка при создании файла ").append(f.getName()).append("\n");
+                }
+            } else stringBuilder.append("Файл " + fileName + "уже был создан ");
         } catch (IOException e) {
             stringBuilder.append("Ошибка при создании файла ").append(f.getName()).append(": ").append(e.getMessage()).append("\n");
+            throw new FileNotFoundException();
         }
     }
-
 
     private static void createFileOrDirectory(String path) {
         File f = new File(path);
-        if (f.mkdirs()) {
-            stringBuilder.append("Директория " + f + "успешно создана: ");
+        if (!f.exists()) {
+            if (f.mkdirs()) {
+                stringBuilder.append("Директория " + f + "успешно создана: ");
+            } else {
+                stringBuilder.append("Ошибка при создании: " + f.getName());
+            }
         } else {
-            stringBuilder.append("Ошибка при создании: " + f.getName());
             stringBuilder.append("Директория уже существует: " + f.getName());
         }
     }
+
 
     private static void saveGame(String filePath, GameProgress game) {
         try (FileOutputStream fos = new FileOutputStream(filePath);
@@ -218,8 +238,15 @@ public class Main {
                     } else {
                         System.err.println("Не удалось удалить файл: " + file.getName());
                     }
+                    try (FileOutputStream fos = new FileOutputStream("C:\\Users\\HP\\IdeaProjects\\installation\\Games\\sro\\temp.txt")) {
+                        fos.write(stringBuilder.toString().getBytes());
+                    } catch (IOException ex) {
+                        System.out.println(ex.getMessage());
+                    }
                 }
             }
         }
     }
 }
+
+
